--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -31,6 +31,15 @@ jobs:
         run: |
           python monitor.py
 
+              - name: Commit dashboard data (docs/)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs/status.json docs/history.csv
+          git commit -m "Update dashboard data" || echo "No changes to commit"
+          git push
+
+
       - name: Upload log artifact
         uses: actions/upload-artifact@v4
         with:
